--- a/static/app/dry-eye/index.html
+++ b/static/app/dry-eye/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8">
     <title>Dry Eye Timer</title>
-    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="./app.js"></script>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="#000000">
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="./manifest.json">
     <link rel="apple-touch-icon" href="./eye-open.svg">
 </head>
 <body>
