--- a/static/app/dry-eye/index.html
+++ b/static/app/dry-eye/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Dry Eye Timer</title>
-    <script type="text/javascript" src="dry-eye/app.js"></script>
+    <script src="dry-eye/app.js"></script>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="dry-eye/manifest.json">
