--- a/static/app/hello/index.html
+++ b/static/app/hello/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My hello world PWA</title>
     <meta name="description" content="Hello World">
-    <link rel="stylesheet" type="text/css" href="hello.css" media="all">
+    <link rel="stylesheet" href="hello.css" media="all">
     <link rel="manifest" href="manifest.json" />
     <link rel="apple-touch-icon" href="tree.png">
     <script async src="https://cdn.jsdelivr.net/npm/pwacompat@2.0.6/pwacompat.min.js"
