Add html elements

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,6 @@
-<!doctype html><meta charset=utf-8>
+<!doctype html>
+<html lang="en">
+<meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <title>
 Oliver Schmid
