Update remaining pages to new minimal design

--- a/public/index.html
+++ b/public/index.html
@@ -1,69 +1,28 @@
 <!doctype html>
 <html lang="en">
-<meta charset=utf-8>
-<meta name=viewport content="width=device-width,initial-scale=1">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Oliver Schmid</title>
-<meta name=description content="Personal Blog">
-<link rel=apple-touch-icon href=/favicon-touch.png>
-<link href=/index.xml rel=alternate type=application/rss+xml title="Oliver Schmid">
-<style type="text/css">
-    a {
-      color: #337ab7;
-      text-decoration: none;
-    }
-    a:hover {
-      color: #23527c;
-      text-decoration: underline;
-    }
-    body {
-      background-color: #fafafa;
-      color: #161718;
-      font-family: BlinkMacSystemFont,-apple-system,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
-      line-height: 1.5rem;
-      text-align: center;
-    }
-    header {
-      padding: 7rem 0 5rem;
-    }
-    h1 {
-      font-size: 5rem;
-      line-height: 5rem;
-      margin: 1rem;
-    }
-    main {
-      max-width: 700px;
-      margin: 0 auto;
-    }
-    section {
-      padding-bottom: 2rem;
-    }
-    ul {
-      padding: 0;
-      list-style-type: none;
-    }
-    @media (prefers-color-scheme: dark) {
-      color: #fafafa;
-      background-color: #337ab7;
-    }
-</style>
-<header>
+<meta name="description" content="Personal Blog">
+<link rel="apple-touch-icon" href="/favicon-touch.png">
+<link href="/index.xml" rel="alternate" type="application/rss+xml" title="Oliver Schmid">
+<link rel="stylesheet" href="/style.css">
+<header class="center">
     <h1>Oliver Schmid</h1>
     <span>Family Man, Software Developer, Athlete, Reader, Artist, Cook</span>
+    <h2><a href="/contact/">Contact Me</a></h2>
 </header>
 <main>
     <section>
-        <h2><a href="/contact/">Contact Me</a></h2>
-    </section>
-    <section>
         <h2>Software</h2>
-        <ul>
+        <ul style="padding: 0; list-style-type: none;">
             <li><a href="https://github.com/oschmid/">GitHub</a>
-            <li><a href=https://glitch.com/@oschmid>Glitch</a>
+            <li><a href="https://glitch.com/@oschmid">Glitch</a>
         </ul>
     </section>
     <section>
         <h2>Writing</h2>
-        <ul>
+        <ul style="padding: 0; list-style-type: none;">
             <li><a href="/posts/pre-push-checklist/">Pre-Push Checklist</a>
             <li><a href="/posts/best-ive-read-lately-3/">Best I've Read Lately 3</a>
             <li><a href="/posts/gtd-in-roam/">GTD in Roam</a>
@@ -74,7 +33,7 @@
             <li><a href="/posts/oura-ring-one-month/">One Month With The Oura Ring</a>
             <li><a href="/posts/no-my-cellphone-wont-blow-up-your-gas-station/">No, My Cellphone Won't Blow Up Your Gas Station</a>
             <li><a href="/posts/2018-bc-referendum-on-electoral-reform/">2018 BC Referendum on Electoral Reform</a>
-            <li><a href="/index.xml">RSS Feed</a>
+            <li><a href="/index.xml" style="display:flex;align-items:center;"><img src="/rss.png" height="18" width="18" style="margin-right:4px;"/><span>RSS Feed</span></a>
         </ul>
     </section>
 </main>
