--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 <title>Oliver Schmid</title>
 <meta name="description" content="Personal Blog">
 <link rel="apple-touch-icon" href="/favicon-touch.png">
-<link href="/index.xml" rel="alternate" type="application/rss+xml" title="Oliver Schmid">
+<link href="/posts/index.xml" rel="alternate" type="application/rss+xml" title="Oliver Schmid">
 <link rel="stylesheet" href="/style.css">
 <header class="center">
     <h1>Oliver Schmid</h1>
@@ -33,7 +33,7 @@
             <li><a href="/posts/oura-ring-one-month/">One Month With The Oura Ring</a>
             <li><a href="/posts/no-my-cellphone-wont-blow-up-your-gas-station/">No, My Cellphone Won't Blow Up Your Gas Station</a>
             <li><a href="/posts/2018-bc-referendum-on-electoral-reform/">2018 BC Referendum on Electoral Reform</a>
-            <li><a href="/index.xml" style="display:flex;align-items:center;"><img src="/rss.png" height="18" width="18" style="margin-right:4px;"/><span>RSS Feed</span></a>
+            <li><a href="/posts/index.xml" style="display:flex;align-items:center;"><img src="/rss.png" alt="RSS Icon" height="18" width="18" style="margin-right:4px;"/><span>RSS Feed</span></a>
         </ul>
     </section>
 </main>
