Adjust link accessibility, add logos

--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,12 @@
     <section>
         <h2>Software</h2>
         <ul style="padding: 0; list-style-type: none;">
-            <li><a href="https://github.com/oschmid/">GitHub</a>
-            <li><a href="https://glitch.com/@oschmid">Glitch</a>
+            <li><a href="https://github.com/oschmid/" style="display:flex;align-items:center;">
+                <img src="/github-mark.png" alt="GitHub Icon" height="18" width="18" style="margin-right:4px;"/>
+                <span>GitHub</span></a>
+            <li><a href="https://glitch.com/@oschmid" style="display:flex;align-items:center;">
+                <img src="https://twemoji.maxcdn.com/v/latest/svg/1f38f.svg" alt="Koinobori" height="18" width="18" style="margin-right:4px;"/>
+                <span>Glitch</span></a>
         </ul>
     </section>
     <section>
@@ -33,7 +37,9 @@
             <li><a href="/posts/oura-ring-one-month/">One Month With The Oura Ring</a>
             <li><a href="/posts/no-my-cellphone-wont-blow-up-your-gas-station/">No, My Cellphone Won't Blow Up Your Gas Station</a>
             <li><a href="/posts/2018-bc-referendum-on-electoral-reform/">2018 BC Referendum on Electoral Reform</a>
-            <li><a href="/posts/index.xml" style="display:flex;align-items:center;"><img src="/rss.png" alt="RSS Icon" height="18" width="18" style="margin-right:4px;"/><span>RSS Feed</span></a>
+            <li><a href="/posts/index.xml" style="display:flex;align-items:center;">
+                <img src="/rss.png" alt="RSS Icon" height="18" width="18" style="margin-right:4px;"/>
+                <span>RSS Feed</span></a>
         </ul>
     </section>
 </main>
