Remove unused classes, update GTD+Roam header

--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -13,37 +13,37 @@
     <form name="contact" action="/contact-success/" method="POST" netlify-honeypot="pooh" netlify>
         <div class="field hidden">
             <label class="label" for="pooh">Don't fill this out if you're human</label>
-            <div class="control">
-                <input class="input" id="pooh" name="pooh"/>
+            <div>
+                <input id="pooh" name="pooh"/>
             </div>
         </div>
         <div class="field hidden">
             <label class="label" for="referrer">Don't fill this out if you're human</label>
-            <div class="control">
-                <input class="input" id="referrer" name="referrer"/>
+            <div>
+                <input id="referrer" name="referrer"/>
             </div>
         </div>
         <div class="field">
             <label class="label" for="name">Name</label>
-            <div class="control">
-                <input class="input" id="name" name="name" autocomplete="name" type="text"/>
+            <div>
+                <input id="name" name="name" autocomplete="name" type="text"/>
             </div>
         </div>
         <div class="field">
             <label class="label" for="email">Email</label>
-            <div class="control">
-                <input class="input" id="email" name="email" autocomplete="email" type="email"/>
+            <div>
+                <input id="email" name="email" autocomplete="email" type="email"/>
             </div>
         </div>
         <div class="field">
             <label class="label" for="message">Message</label>
-            <div class="control">
-                <textarea class="textarea" id="message" name="message"></textarea>
+            <div>
+                <textarea id="message" name="message"></textarea>
             </div>
         </div>
-        <div class="control">
+        <div style="text-align:right;">
             <a id="cancel" href="/">Cancel</a>
-            <button class="button is-link is-pulled-right" type="submit">Send</button>
+            <button type="submit">Send</button>
         </div>
     </form>
 </main>
