--- a/public/404.html
+++ b/public/404.html
@@ -8,6 +8,7 @@
 <meta name="description" content="Personal Blog">
 <link rel="apple-touch-icon" href="/favicon-touch.png">
 <link rel="stylesheet" href="/style.css">
+<link rel="preload" href="/Inter-VariableFont_slnt,wght.woff2" as="font"/>
 <main class="center" style="margin-top:3rem;margin-bottom:3rem;">
 Oops! I couldn't find that page. Try starting from the <a href="/">homepage</a>.
 </main>
