--- a/public/contact-success/index.html
+++ b/public/contact-success/index.html
@@ -10,6 +10,7 @@
 <meta name="description" content="Personal Blog">
 <link rel="apple-touch-icon" href="/favicon-touch.png">
 <link rel="stylesheet" href="/style.css">
+<link rel="preload" href="/Inter-VariableFont_slnt,wght.woff2" as="font"/>
 <main>
 Thanks for the message! Would you like to <a href="/">return home</a>?
 </main>
