Add score plus/minus link

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <section>
         <h2>Software</h2>
         <ul style="padding: 0; list-style-type: none;">
+            <li><a href="https://github.com/oschmid/scoreplusminus">Scoreboard with Plus/Minus</a></li>
             <li><a href="https://github.com/oschmid/" style="display:flex;align-items:center;">
                 <img src="/github-mark.png" alt="GitHub Logo" height="18" width="18" style="margin-right:4px;"/>
                 <span>GitHub</span></a>
