Add LinkedIn resume link

--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,9 @@
                     </g>
                 </svg>
                 <span>Glitch</span></a>
+            <li><a href="https://www.linkedin.com/in/oliver-schmid-62625514/" style="display:flex;align-items:center;">
+                <img src="/In-Blue-14.png" alt="LinkedIn Logo" height="18" width="18" style="margin-right:4px;"/>
+                <span>Resume</span></a>
         </ul>
     </section>
     <section>
