--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,13 @@
 <link rel="apple-touch-icon" href="/favicon-touch.png">
 <link href="/posts/index.xml" rel="alternate" type="application/rss+xml" title="Oliver Schmid">
 <link rel="stylesheet" href="/style.css">
+<style type="text/css">
+    @media (prefers-color-scheme: dark) {
+      #github-logo {
+        filter: invert(1);
+      }
+    }
+</style>
 <header class="center">
     <h1>Oliver Schmid</h1>
     <span>Family Man, Software Developer, Athlete, Reader, Artist, Cook</span>
@@ -18,7 +25,7 @@
         <ul style="padding: 0; list-style-type: none;">
             <li><a href="https://github.com/oschmid/scoreplusminus">Scoreboard with Plus/Minus</a></li>
             <li><a href="https://github.com/oschmid/" style="display:flex;align-items:center;">
-                <img src="/github-mark.png" alt="GitHub Logo" height="18" width="18" style="margin-right:4px;"/>
+                <img id="github-logo" src="/github-mark.png" alt="GitHub Logo" height="18" width="18" style="margin-right:4px;"/>
                 <span>GitHub</span></a>
             <li><a href="https://glitch.com/@oschmid" style="display:flex;align-items:center;">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 478.48" height="18" width="18" style="margin-right:4px;">
