--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,20 @@
 <link href="/posts/index.xml" rel="alternate" type="application/rss+xml" title="Oliver Schmid">
 <link rel="stylesheet" href="/style.css">
 <style type="text/css">
+    li > a {
+      display: flex;
+      align-items: center;
+    }
+    li > a > img, li > a > svg {
+      margin-right: 4px;
+    }
+    main {
+      max-width: 500px;
+    }
+    ul {
+      list-style-type: none;
+      padding: 0;
+    }
     @media (prefers-color-scheme: dark) {
       #github-logo {
         filter: invert(1);
@@ -22,13 +36,13 @@
 <main>
     <section>
         <h2>Software</h2>
-        <ul style="padding: 0; list-style-type: none;">
+        <ul>
             <li><a href="https://github.com/oschmid/scoreplusminus">Scoreboard with Plus/Minus</a></li>
-            <li><a href="https://github.com/oschmid/" style="display:flex;align-items:center;">
-                <img id="github-logo" src="/github-mark.png" alt="GitHub Logo" height="18" width="18" style="margin-right:4px;"/>
+            <li><a href="https://github.com/oschmid/">
+                <img id="github-logo" src="/github-mark.png" alt="GitHub Logo" height="18" width="18"/>
                 <span>GitHub</span></a>
-            <li><a href="https://glitch.com/@oschmid" style="display:flex;align-items:center;">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 478.48" height="18" width="18" style="margin-right:4px;">
+            <li><a href="https://glitch.com/@oschmid">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 478.48" height="18" width="18">
                     <title>Glitch Logo</title>
                     <g data-name="Logomark">
                         <path fill="#2800ff"
@@ -58,14 +72,14 @@
                     </g>
                 </svg>
                 <span>Glitch</span></a>
-            <li><a href="https://www.linkedin.com/in/oliver-schmid-62625514/" style="display:flex;align-items:center;">
-                <img src="/In-Blue-14.png" alt="LinkedIn Logo" height="18" width="18" style="margin-right:4px;"/>
+            <li><a href="https://www.linkedin.com/in/oliver-schmid-62625514/">
+                <img src="/In-Blue-14.png" alt="LinkedIn Logo" height="18" width="18"/>
                 <span>Resume</span></a>
         </ul>
     </section>
     <section>
         <h2>Writing</h2>
-        <ul style="padding: 0; list-style-type: none;">
+        <ul>
             <li><a href="/posts/pre-push-checklist/">Pre-Push Checklist</a>
             <li><a href="/posts/best-ive-read-lately-3/">Best I've Read Lately 3</a>
             <li><a href="/posts/gtd-in-roam/">GTD in Roam</a>
@@ -76,8 +90,8 @@
             <li><a href="/posts/oura-ring-one-month/">One Month With The Oura Ring</a>
             <li><a href="/posts/no-my-cellphone-wont-blow-up-your-gas-station/">No, My Cellphone Won't Blow Up Your Gas Station</a>
             <li><a href="/posts/2018-bc-referendum-on-electoral-reform/">2018 BC Referendum on Electoral Reform</a>
-            <li><a href="/posts/index.xml" style="display:flex;align-items:center;">
-                <img src="/rss.png" alt="RSS Logo" height="18" width="18" style="margin-right:4px;"/>
+            <li><a href="/posts/index.xml">
+                <img src="/rss.png" alt="RSS Logo" height="18" width="18"/>
                 <span>RSS Feed</span></a>
         </ul>
     </section>
