--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -6,6 +6,7 @@
 <meta name="description" content="Contact Form">
 <link rel="apple-touch-icon" href="/favicon-touch.png">
 <link rel="stylesheet" href="/style.css">
+<a href="/" title="Home" style="position:absolute;"><img src="/favicon-touch.png" alt="Home" height="48" width="48"/></a>
 <header class="center">
     <h1>Contact Me</h1>
 </header>
