--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
       }
     }
 </style>
+<a style="position:absolute;"><img src="/favicon-touch.png" alt="Home" height="48" width="48"/></a>
 <header class="center">
     <h1>Oliver Schmid</h1>
     <span>Family Man, Software Developer, Athlete, Reader, Artist, Cook</span>
