--- a/public/404.html
+++ b/public/404.html
@@ -8,7 +8,7 @@
 <meta name="description" content="Personal Blog">
 <link rel="apple-touch-icon" href="/favicon-touch.png">
 <link rel="stylesheet" href="/style.css">
-<a href="/" title="Home" style="position:absolute;"><img src="/favicon-touch.png" alt="Home" height="48" width="48"/></a>
+<a href="/" title="Home" style="position:absolute;"><img src="/favicon-touch.png" alt="Oliver Schmid Owl Logo" height="48" width="48"/></a>
 <main class="center" style="margin-top:3rem;margin-bottom:3rem;">
 Oops! I couldn't find that page. Try starting from the <a href="/">homepage</a>.
 </main>
