Remove inline styles

--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -6,7 +6,7 @@
 <meta name="description" content="Contact Form">
 <link rel="apple-touch-icon" href="/favicon-touch.png">
 <link rel="stylesheet" href="/style.css">
-<a href="/" title="Home" style="position:absolute;"><img src="/favicon-touch.png" alt="Oliver Schmid Owl Logo" height="48" width="48"/></a>
+<a href="/" title="Home" class="home"><img src="/favicon-touch.png" alt="Oliver Schmid Owl Logo" height="48" width="48"/></a>
 <header class="center">
     <h1>Contact Me</h1>
 </header>
@@ -29,8 +29,8 @@
             <span>Referrer</span>
             <input id="referrer" name="referrer"/>
         </label>
-        <div style="text-align:right;">
-            <a id="cancel" href="/" style="margin-right: 1em;">Cancel</a>
+        <div class="align-right">
+            <a id="cancel" href="/" class="margin-right-1">Cancel</a>
             <button type="submit">Send</button>
         </div>
     </form>
