--- a/public/contact-success/index.html
+++ b/public/contact-success/index.html
@@ -10,7 +10,7 @@
 <meta name="description" content="Personal Blog">
 <link rel="apple-touch-icon" href="/favicon-touch.png">
 <link rel="stylesheet" href="/style.css">
-<a href="/" title="Home" style="position:absolute;"><img src="/favicon-touch.png" alt="Oliver Schmid Owl Logo" height="48" width="48"/></a>
+<a href="/" title="Home" class="home"><img src="/favicon-touch.png" alt="Oliver Schmid Owl Logo" height="48" width="48"/></a>
 <main>
 Thanks for the message! Would you like to <a href="/">return home</a>?
 </main>
