Remove inline script

--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -35,16 +35,4 @@
         </div>
     </form>
 </main>
-<script type="text/javascript">
-    // https://stackoverflow.com/a/46163215
-    if (document.referrer) {
-        document.getElementById('referrer').value = document.referrer;
-
-        var element = document.getElementById('cancel');
-        element.setAttribute('href', document.referrer);
-        element.onclick = function() {
-            history.back();
-            return false;
-        }
-    }
-</script>
+<script async type="text/javascript" src="./script.js"></script>
