Remove inline style

--- a/public/index.html
+++ b/public/index.html
@@ -7,42 +7,21 @@
 <link rel="apple-touch-icon" href="/favicon-touch.png">
 <link href="/posts/index.xml" rel="alternate" type="application/rss+xml" title="Oliver Schmid">
 <link rel="stylesheet" href="/style.css">
-<style type="text/css">
-    li > a {
-      display: flex;
-      align-items: center;
-    }
-    li > a > img, li > a > svg {
-      margin-right: 4px;
-    }
-    main {
-      max-width: 500px;
-    }
-    ul {
-      list-style-type: none;
-      padding: 0;
-    }
-    @media (prefers-color-scheme: dark) {
-      #github-logo {
-        filter: invert(1);
-      }
-    }
-</style>
 <div class="home"><img src="/favicon-touch.png" alt="Oliver Schmid Owl Logo" height="48" width="48"/></div>
 <header class="center">
     <h1>Oliver Schmid</h1>
     <span>Family Man, Software Developer, Athlete, Reader, Artist, Cook</span>
     <h2><a href="/contact/">Contact Me</a></h2>
 </header>
-<main>
+<main class="max-width-500">
     <section>
         <h2>Software</h2>
-        <ul>
-            <li><a href="https://github.com/oschmid/scoreplusminus">Scoreboard with Plus/Minus</a></li>
-            <li><a href="https://github.com/oschmid/">
+        <ul class="unstyled-list">
+            <li class="img-link"><a href="https://github.com/oschmid/scoreplusminus">Scoreboard with Plus/Minus</a></li>
+            <li class="img-link"><a href="https://github.com/oschmid/">
                 <img id="github-logo" src="/github-mark.png" alt="GitHub Logo" height="18" width="18"/>
                 <span>GitHub</span></a>
-            <li><a href="https://glitch.com/@oschmid">
+            <li class="img-link"><a href="https://glitch.com/@oschmid">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 478.48" height="18" width="18">
                     <title>Glitch Logo</title>
                     <g data-name="Logomark">
@@ -73,14 +52,14 @@
                     </g>
                 </svg>
                 <span>Glitch</span></a>
-            <li><a href="https://www.linkedin.com/in/oliver-schmid-62625514/">
+            <li class="img-link"><a href="https://www.linkedin.com/in/oliver-schmid-62625514/">
                 <img src="/In-Blue-21.png" alt="LinkedIn Logo" height="18" width="18"/>
                 <span>Resume</span></a>
         </ul>
     </section>
     <section>
         <h2>Writing</h2>
-        <ul>
+        <ul class="unstyled-list">
             <li><a href="/posts/pre-push-checklist/">Pre-Push Checklist</a>
             <li><a href="/posts/best-ive-read-lately-3/">Best I've Read Lately 3</a>
             <li><a href="/posts/gtd-in-roam/">GTD in Roam</a>
@@ -91,7 +70,7 @@
             <li><a href="/posts/oura-ring-one-month/">One Month With The Oura Ring</a>
             <li><a href="/posts/no-my-cellphone-wont-blow-up-your-gas-station/">No, My Cellphone Won't Blow Up Your Gas Station</a>
             <li><a href="/posts/2018-bc-referendum-on-electoral-reform/">2018 BC Referendum on Electoral Reform</a>
-            <li><a href="/posts/index.xml">
+            <li class="img-link"><a href="/posts/index.xml">
                 <img src="/rss.png" alt="RSS Logo" height="18" width="18"/>
                 <span>RSS Feed</span></a>
         </ul>
