Add decimal keyboard

--- a/public/apps/1RM/index.html
+++ b/public/apps/1RM/index.html
@@ -6,9 +6,9 @@
 <meta name="description" content="1RM Percentages">
 <link rel="apple-touch-icon" href="/favicon-touch.png">
 <main>
-    <input id="onerm" type="number" pattern="[0-9]*" inputmode="numeric" min="0"/><button id="add-onerm">Add 1RM</button>
+    <input id="onerm" type="number" inputmode="decimal" min="0"/><button id="add-onerm">Add 1RM</button>
     <br>
-    <input id="percentage" type="number" pattern="[0-9]*" inputmode="numeric" min="0"/><button id="add-percentage">Add Percentage</button>
+    <input id="percentage" type="number" inputmode="decimal" min="0"/><button id="add-percentage">Add Percentage</button>
     <button id="reset">Reset</button>
     <table id="table"></table>
 </main>
