--- a/public/apps/1RM/index.html
+++ b/public/apps/1RM/index.html
@@ -4,7 +4,8 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>1RM Percentages</title>
 <meta name="description" content="1RM Percentages">
-<link rel="apple-touch-icon" href="/favicon-touch.png">
+<link rel="shortcut icon" type="image/png" href="./weightlifting.png"/>
+<link rel="apple-touch-icon" href="./weightlifting.png">
 <main>
     <input id="onerm" type="number" inputmode="decimal" min="0"/><button id="add-onerm">Add 1RM</button>
     <br>
