Add Undo button

--- a/public/apps/1RM/index.html
+++ b/public/apps/1RM/index.html
@@ -7,9 +7,12 @@
 <link rel="shortcut icon" type="image/png" href="./weightlifting.png"/>
 <link rel="apple-touch-icon" href="./weightlifting.png">
 <main>
-    <input id="onerm" type="number" inputmode="decimal" min="0"/><button id="add-onerm">Add 1RM</button>
+    <input id="onerm" type="number" inputmode="decimal" min="0"/>
+    <button id="add-onerm">Add 1RM</button>
+    <button id="undo">Undo</button>
     <br>
-    <input id="percentage" type="number" inputmode="decimal" min="0"/><button id="add-percentage">Add Percentage</button>
+    <input id="percentage" type="number" inputmode="decimal" min="0"/>
+    <button id="add-percentage">Add Percentage</button>
     <button id="reset">Reset</button>
     <table id="table"></table>
 </main>
