--- a/public/apps/1RM/index.html
+++ b/public/apps/1RM/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
+<meta name="theme-color" content="#ffffff">
 <title>1RM Percentages</title>
 <meta name="description" content="1RM Percentages">
 <link rel="shortcut icon" type="image/png" href="./weightlifting.png"/>
 <link rel="apple-touch-icon" href="./weightlifting.png">
+<link rel="manifest" href="./manifest.json"/>
 <main>
     <input id="onerm" type="number" inputmode="decimal" min="0"/>
     <button id="add-onerm">Add 1RM</button>
