Add input labels

--- a/public/apps/1RM/index.html
+++ b/public/apps/1RM/index.html
@@ -9,11 +9,11 @@
 <link rel="apple-touch-icon" href="./weightlifting.png">
 <link rel="manifest" href="./manifest.json"/>
 <main>
-    <input id="onerm" type="number" inputmode="decimal" min="0"/>
+    <input id="onerm" type="number" inputmode="decimal" min="0" placeholder="Weight" aria-label="Weight"/>
     <button id="add-onerm">Add 1RM</button>
     <button id="undo">Undo</button>
     <br>
-    <input id="percentage" type="number" inputmode="decimal" min="0"/>
+    <input id="percentage" type="number" inputmode="decimal" min="0" placeholder="Percentage" aria-label="Percentage"/>
     <button id="add-percentage">Add Percentage</button>
     <button id="reset">Reset</button>
     <table id="table"></table>
