--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <div class="home"><img src="/favicon-touch.png" alt="Oliver Schmid Owl Logo" height="48" width="48"/></div>
 <header class="center">
     <h1>Oliver Schmid</h1>
-    <span>Family Man, Software Developer, Athlete, Reader, Artist, Cook</span>
+    <span>Family&nbsp;Man,&nbsp;Software&nbsp;Developer, Athlete,&nbsp;Reader,&nbsp;Artist,&nbsp;Cook</span>
     <h2><a href="/contact/">Contact Me</a></h2>
 </header>
 <main class="max-width-500">
