Add Conjugate Method Efforts

--- a/public/apps/1RM/index.html
+++ b/public/apps/1RM/index.html
@@ -7,6 +7,7 @@
 <meta name="description" content="1RM Percentages">
 <link rel="shortcut icon" type="image/png" href="./weightlifting.png"/>
 <link rel="apple-touch-icon" href="./weightlifting.png">
+<link rel="stylesheet" href="./style.css">
 <link rel="manifest" href="./manifest.json"/>
 <main>
     <input id="onerm" type="number" inputmode="decimal" min="0" placeholder="Weight" aria-label="Weight"/>
@@ -16,6 +17,13 @@
     <input id="percentage" type="number" inputmode="decimal" min="0" placeholder="Percentage" aria-label="Percentage"/>
     <button id="add-percentage">Add Percentage</button>
     <button id="reset">Reset</button>
+    <br>
+    <button id="all-efforts">All Efforts</button>
+    <button id="explosive-efforts">Explosive</button>
+    <button id="dynamic-efforts">Dynamic</button>
+    <button id="repetitive-efforts">Repetitive</button>
+    <button id="max-efforts">Max</button>
+    <button id="custom-efforts">Custom</button>
     <table id="table"></table>
 </main>
 <script async type="text/javascript" src="./script.js"></script>
