--- a/public/apps/1RM/index.html
+++ b/public/apps/1RM/index.html
@@ -10,11 +10,11 @@
 <link rel="stylesheet" href="./style.css">
 <link rel="manifest" href="./manifest.json"/>
 <main>
-    <input id="onerm" type="number" inputmode="decimal" min="0" placeholder="Weight" aria-label="Weight"/>
+    <input id="onerm" type="number" inputmode="decimal" min="0" placeholder="Weight" aria-label="Weight">
     <button id="add-onerm">Add 1RM</button>
     <button id="undo">Undo</button>
     <br>
-    <input id="percentage" type="number" inputmode="decimal" min="0" placeholder="Percentage" aria-label="Percentage"/>
+    <input id="percentage" type="number" inputmode="decimal" min="0" placeholder="Percentage" aria-label="Percentage">
     <button id="add-percentage">Add Percentage</button>
     <button id="reset">Reset</button>
     <br>
