--- a/public/apps/1RM/index.html
+++ b/public/apps/1RM/index.html
@@ -7,7 +7,7 @@
 <meta name="description" content="1RM Percentages">
 <link rel="shortcut icon" type="image/png" href="./weightlifting.png"/>
 <link rel="apple-touch-icon" href="./weightlifting.png">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+<link rel="stylesheet" href="/bulma-0.9.4.min.css">
 <link rel="manifest" href="./manifest.json"/>
 <main class="section">
     <div class="container">
