--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,8 @@
     <section>
         <h2>Software</h2>
         <ul class="unstyled-list">
-            <li class="img-link"><a href="https://github.com/oschmid/scoreplusminus">Scoreboard with Plus/Minus</a></li>
+            <li><a href="/apps/1RM/">Conjugate Method Training Calculator</a></li>
+            <li><a href="https://github.com/oschmid/scoreplusminus">Scoreboard with Plus/Minus</a></li>
             <li class="img-link"><a href="https://github.com/oschmid/">
                 <img id="github-logo" src="/github-mark.png" alt="GitHub Logo" height="18" width="18"/>
                 <span>GitHub</span></a>
