Add mouseover titles

--- a/public/apps/1RM/index.html
+++ b/public/apps/1RM/index.html
@@ -13,12 +13,12 @@
     <div class="container">
         <div class="field has-addons">
             <p class="control"><input id="weight" class="input" type="number" inputmode="decimal" min="0" placeholder="Weight" aria-label="Weight"></p>
-            <p class="control"><button id="add-weight" class="button" disabled>+</button></p>
+            <p class="control"><button id="add-weight" class="button" title="Add Weight" disabled>+</button></p>
             <button id="undo" class="button ml-6" disabled>Undo</button>
         </div>
         <div class="field has-addons">
             <p class="control"><input id="percentage" class="input" type="number" inputmode="decimal" min="0" placeholder="Percentage" aria-label="Percentage"></p>
-            <p class="control"><button id="add-percentage" class="button" disabled>+</button></p>
+            <p class="control"><button id="add-percentage" class="button" title="Add Percentage" disabled>+</button></p>
             <button id="reset" class="button ml-6" disabled>Reset</button>
         </div>
         <div class="buttons has-addons mt-6">
