Stop effort buttons from flashing dark during page load

--- a/public/apps/1RM/index.html
+++ b/public/apps/1RM/index.html
@@ -27,7 +27,7 @@
             <button id="dynamic-efforts" class="button">Dynamic</button>
             <button id="repetitive-efforts" class="button">Repetitive</button>
             <button id="max-efforts" class="button">Max</button>
-            <button id="custom-efforts" class="button is-dark" disabled>Custom</button>
+            <button id="custom-efforts" class="button">Custom</button>
         </div>
         <table id="table" class="table is-bordered is-striped is-narrow"></table>
     </div>
