Rename 1RM to Conjugate Calculator

--- a/public/apps/conjugate-calculator/index.html
+++ b/public/apps/conjugate-calculator/index.html
@@ -3,8 +3,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <meta name="theme-color" content="#ffffff">
-<title>1RM Percentages</title>
-<meta name="description" content="1RM Percentages">
+<title>Conjugate Calculator</title>
+<meta name="description" content="Conjugate Method Training Calculator">
 <link rel="shortcut icon" type="image/png" href="./weightlifting.png"/>
 <link rel="apple-touch-icon" href="./weightlifting.png">
 <link rel="stylesheet" href="/bulma-0.9.4.min.css">
