Add Conjugate Calculator About page

--- a/public/apps/conjugate-calculator/index.html
+++ b/public/apps/conjugate-calculator/index.html
@@ -9,7 +9,7 @@
 <link rel="apple-touch-icon" href="./weightlifting.png">
 <link rel="stylesheet" href="/bulma-0.9.4.min.css">
 <link rel="manifest" href="./manifest.json"/>
-<main class="section">
+<main class="section hero">
     <div class="container">
         <div class="field has-addons">
             <p class="control"><input id="weight" class="input" type="number" inputmode="decimal" min="0" placeholder="Weight" aria-label="Weight"></p>
@@ -30,6 +30,9 @@
             <button id="custom-efforts" class="button">Custom</button>
         </div>
         <table id="table" class="table is-bordered is-striped is-narrow"></table>
+    </div>
+    <div class="content has-text-centered">
+        <p><a href="./about/">About</a>
     </div>
 </main>
 <script async type="text/javascript" src="./script.js"></script>
